[package]
name = "wei-kill"
version = "0.1.3"
edition = "2021"
description = "kill process by name, pid or port number"
license = "MIT OR Apache-2.0"
documentation = "https://github.com/zuiyue-com/wei-kill"
homepage = "https://github.com/weiforce/wei-kill"
authors = ["Wei <market@zuiyue.com>"]

[dependencies]